# rust_ml

./: .gitignore  README.md
.github/workflows/: rust.yml
bert-ft/: Cargo.toml  build.rs
bert-ft/scripts/: convert_to_onnx.py  inference.py  mnist.py  requirements.txt  training.py
bert-ft/src/: lib.rs  main.rs
bert-ft/src/model/: mod.rs
bert-onnx-inference/: Cargo.toml
bert-onnx-inference/data/: test.txt
trf-ort/: Cargo.toml
trf-ort/data/: test.txt
trf-ort/src/: main.rs
